Fix some awk spacing

--- a/sass/_containers.scss
+++ b/sass/_containers.scss
@@ -5,7 +5,7 @@
  */
 
 .container {
-	padding: 24px 0px;
+	padding: 12px 0px;
 	margin: 0;
 }
 
