--- a/sass/containers/_ad-and-two-dominant.scss
+++ b/sass/containers/_ad-and-two-dominant.scss
@@ -1,9 +1,8 @@
 
 
 .container.ad-and-two-dominant {
-	margin-top: 54px;
 	.sidekick-ad {
-		margin-bottom: 24px;
+		margin-bottom: 12px;
 	}
 	a.story {
 		position: relative;
