--- a/sass/containers/_feature-widget.scss
+++ b/sass/containers/_feature-widget.scss
@@ -7,7 +7,6 @@
  */
 
 .container.feature-widget {
-	margin-top: 54px;
 	.widget {
 		display: none;
 	}
